# sopa

./: AUTHORS  Makefile.am  README.md  autogen.sh  configure.ac  sopa.pc.in
examples/: Makefile.am  parse_and_dump.c
sopa/: Makefile.am  lib.c  sopa-comment.c  sopa-comment.h  sopa-data.c  sopa-data.h  sopa-document.c  sopa-document.h  sopa-element.c  sopa-element.h  sopa-enum-types.c.in  sopa-enum-types.h.in  sopa-macros.h  sopa-node-private.h  sopa-node.c  sopa-node.h  sopa-parser.c  sopa-parser.h  sopa-tag.c  sopa-tag.h  sopa-text.c  sopa-text.h  sopa-version.h.in  sopa.h
tests/: Makefile.am
